Agregando maquetado login y navbar

--- a/client/NoWait/src/app/shared/components/sctruct/navbar/navbar.component.html
+++ b/client/NoWait/src/app/shared/components/sctruct/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 <nav
-  class="bg-[#E2C30A] border-gray-200 dark:bg-gray-900 h-[56px] rounded-[20px] px-8 mx-8 absolute mt-8 top-0 left-0 right-0 z-50 shadow-md dark:border-gray-700 dark:shadow-lg"
+  class="h-[56px] md:bg-[#E2C30A] rounded-[20px] px-8 mx-8 absolute mt-8 top-0 left-0 right-0 z-50"
 >
   <div class="flex flex-wrap items-center justify-between h-full">
     <div class="flex-1">
-      <img src="../assets/nowait.svg" class="h-10" alt="Flowbite Logo" />
+      <img src="../assets/nowait.svg" class="h-7" alt="Flowbite Logo" />
     </div>
 
     <div class="flex">
@@ -14,19 +14,20 @@
         aria-controls="navbar-search"
         aria-expanded="false"
       >
+        <!-- menu hambrguesa -->
         <svg
-          class="w-5 h-5"
+          class="min-w-10 min-h-10 text-[#ff0000be] "
           aria-hidden="true"
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
-          viewBox="0 0 17 14"
+          viewBox="0 0 24 24"
         >
           <path
             stroke="currentColor"
             stroke-linecap="round"
             stroke-linejoin="round"
             stroke-width="2"
-            d="M1 1h15M1 7h15M1 13h15"
+            d="M5 4h1.5L9 16m0 0h8m-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-8.5-3h9.25L19 7H7.312"
           />
         </svg>
       </button>
@@ -36,7 +37,7 @@
       class="items-center justify-between hidden w-full md:flex md:flex-1 md:w-auto md:order-1"
       id="navbar-search"
     >
-      <div class=" w-9/12 relative hidden md:block ">
+      <div class="w-9/12 relative hidden md:block">
         <div
           class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none"
         >
@@ -92,9 +93,8 @@
         />
       </div>
 
-      
       <ul
-        class="flex flex-col p-4 md:p-0 mt-4 font-medium border  rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0  dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
+        class="flex flex-col p-4 md:p-0 mt-4 font-medium border rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
       >
         <li>
           <a
