--- a/client/NoWait/src/app/shared/components/banners/banner-home/banner-home.component.css
+++ b/client/NoWait/src/app/shared/components/banners/banner-home/banner-home.component.css
@@ -1,28 +1,7 @@
-.box::before {
-  content: "Esperar por tu comida es cosa del pasado BIENVENIDOS A NO WAIT!";
-  position: absolute;
-  top: 12.5rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 20rem;
-  height: 10rem;
-  padding: 2rem 8rem;
-  border-radius: 0 20px 20px 0;
-  background-color: rgba(243, 244, 246, 0.5);
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-weight: 200;
-  text-align: center;
-  color: #56523d;
-}
+/* Agrega la fuente Yanone Kaffeesatz */
+@import url("https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@200;300;400;500;600;700&display=swap");
 
-@media screen and (max-width: 768px) {
-  .box::before {
-    top: 10rem;
-    width: 100%;
-    height: 8rem;
-    padding: 1rem 4rem;
-    border-radius: 0;
-    font-weight: bold;
-  }
+.text-banner {
+  font-family: "Yanone Kaffeesatz", sans-serif;
+
 }
