fix(front): footer y card-aux
footer integrado y card sin html

ref:(#12 #48)

--- a/client/NoWait/src/app/pages/home/home.component.html
+++ b/client/NoWait/src/app/pages/home/home.component.html
@@ -1,1 +1,15 @@
 <app-banner-home></app-banner-home>
+
+<div class="text-center w-full">
+
+    <div class="my-16">
+        <h1 class="text-4xl text-center font-['Yanone_kaffesata'] font-bold">PROMOCIONES</h1>
+    </div>
+    <div class="block md:flex justify-center gap-[56px] mb-16 w-full">
+
+        <app-card imgSrc="https://i.pinimg.com/736x/02/26/2d/02262ddea0d44393a017985656968f10.jpg"></app-card>
+        <app-card imgSrc="https://i.pinimg.com/736x/5d/c8/90/5dc8908c54553a1183ed10cbf8bae0ee.jpg"></app-card>
+        <app-card imgSrc="https://i.pinimg.com/236x/6a/88/32/6a8832d29a911b320f9c68af86f8e134.jpg"></app-card>
+    </div>
+
+</div>
