--- a/client/NoWait/src/app/shared/components/banners/banner-home/banner-home.component.html
+++ b/client/NoWait/src/app/shared/components/banners/banner-home/banner-home.component.html
@@ -1,20 +1,15 @@
-<div
-  class="h-screen box w-full max-lg:flex justify-center items-center relative"
-  style="
+<div class="h-screen box w-full max-lg:flex justify-center items-center relative" style="
     background-image: url(assets/Food.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-  "
->
-  <div class="absolute top-20 mt-10 text-banner py-3 bg-[#f3f4f64e] w-full text-center text-[#56523D] md:left-0 md:w-1/4 md:rounded-tr-3xl md:rounded-br-3xl md:top-48 md:h-40 md:mt-0 md:flex md:flex-col md:justify-center">
+  ">
+  <div
+    class="absolute top-20 mt-10 text-banner py-3 bg-[#f3f4f64e] w-full text-center text-[#56523D] md:left-0 md:w-1/4 md:rounded-tr-3xl md:rounded-br-3xl md:top-48 md:h-40 md:mt-0 md:flex md:flex-col md:justify-center">
     <p class="font-bold text-banner ">Esperar por tu comida es cosa del pasado</p>
     <h1 class="text-3xl font-extrabold">BIENVENIDOS A NO WAIT!</h1>
   </div>
 
-  <img
-    src="assets/Logo-Circulo.png"
-    alt=""
-    class="absolute bottom-20 w-[12rem] lg:right-16 lg:top-40 md:w-[15rem] lg:translate-x-0"
-  />
+  <img src="assets/Logo-Circulo.png" alt=""
+    class="absolute bottom-20 w-[12rem] lg:right-16 lg:top-40 md:w-[15rem] lg:translate-x-0" />
 </div>
