--- a/client/NoWait/src/app/app.component.html
+++ b/client/NoWait/src/app/app.component.html
@@ -1,2 +1,4 @@
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
+<!-- calcular la distancia con footer para quitar el scroll-->
+<app-footer></app-footer>
