--- a/client/NoWait/src/app/shared/components/sctruct/footer/footer.component.html
+++ b/client/NoWait/src/app/shared/components/sctruct/footer/footer.component.html
@@ -36,7 +36,7 @@
         </a>
     </div>
 
-    <div class="text-white text-sm pt-4 pl-12 font-['Yanone_kaffesata']">
+    <div class="text-white text-sm pt-4 pl-12 text-yanone">
         <h3>© NO WAIT 2024. Todos los derechos reservados.</h3>
 
     </div>
