--- a/client/NoWait/src/app/pages/modals/login/login.component.html
+++ b/client/NoWait/src/app/pages/modals/login/login.component.html
@@ -1,22 +1,22 @@
 <div
-  class="w-full h-screen flex flex-col items-center justify-evenly py-8 md:py-0 md:flex-row-reverse"
+  class="login-container w-full h-screen flex flex-col items-center justify-evenly py-8 md:py-0 md:flex-row-reverse"
   style="
-    background-image: url(assets/Login-BG.png);
+    background-image: url(assets/login-bg-full.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: unset;
+    background-position: center;
   "
 >
-  <div class="flex-1 md:bg-white md:h-screen flex items-center justify-center w-full">
+  <div class="login-container flex-1 md:bg-white md:h-screen flex items-center justify-center w-full">
     <form
-      class="bg-[#E2C30A] w-[85%] md:w-[70%] md:h-[480px] h-[270px] rounded-2xl shadow-2xl flex flex-col items-center justify-center gap-4 md:gap-16 "
+      class="bg-[#E2C30A] w-[85%] md:w-[70%] md:h-[400px] h-[270px] rounded-2xl shadow-2xl flex flex-col items-center justify-center gap-4 md:gap-16 "
     >
       <h1 class="text- md:text-3xl font-bold text-[#56523D]">LOGIN</h1>
       <div class="flex flex-col items-center gap-4">
         <input
           type="text"
           name="username"
-          placeholder="Email o usuario"
+          placeholder="Email"
           class="px-4 py-2 rounded-md w-64 outline-none border-none shadow-inner placeholder:text-gray-300"
         />
         <input
@@ -36,8 +36,8 @@
   </div>
   <div class="md:flex-1 flex items-center justify-center relative md:h-full">
     <div
-      class="hidden md:block md:bg-cover bg-center md:absolute md:h-scren inset-0"
-      style="background-image: url('assets/Login-BG.png')"
+      class="hidden md:block md:bg-cover bg-center md:absolute inset-0 md:h-full md:w-[50vw]"
+      style="background-image: url('assets/login-bg-full.jpeg')"
     ></div>
     <img src="assets/Logo-Circulo.png" alt="" class="h-28 z-50 md:h-48" />
   </div>
