--- a/client/NoWait/src/app/shared/components/card/card.component.html
+++ b/client/NoWait/src/app/shared/components/card/card.component.html
@@ -1,4 +1,3 @@
-<div class="min-w-[200px] h-[160px]">
+<div class="min-w-[272px] h-[300px] aspect-square md:h-[272px] md:aspect-square m-auto rounded-[24px] overflow-hidden">
     <img class="block w-full h-full bg-black object-cover" [src]="imgSrc" alt="hoy">
-
 </div>
