--- a/client/NoWait/src/app/shared/components/sctruct/navbar/navbar.component.html
+++ b/client/NoWait/src/app/shared/components/sctruct/navbar/navbar.component.html
@@ -1,14 +1,13 @@
 <nav
-  class="h-[56px] md:bg-[#E2C30A] rounded-[20px] px-8 mx-8 absolute mt-8 top-0 left-0 right-0 z-50"
+  class="h-[56px] md:bg-[#E2C30A] rounded-[20px] mx-9 absolute mt-8 top-0 left-0 right-0 z-50 md:px-5 md:mt-4"
 >
-  <div class="flex flex-wrap items-center justify-between h-full">
-    <div class="flex-1">
+  <div class="flex flex-wrap items-center justify-between py-2">
+    <a routerLink="/home" class="flex " >
       <img src="../assets/nowait.svg" class="h-7" alt="Flowbite Logo" />
-    </div>
+    </a>
 
     <div class="flex">
       <button
-        data-collapse-toggle="navbar-search"
         type="button"
         class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
         aria-controls="navbar-search"
@@ -34,7 +33,7 @@
     </div>
 
     <div
-      class="items-center justify-between hidden w-full md:flex md:flex-1 md:w-auto md:order-1"
+      class="items-center justify-end hidden w-full md:flex md:flex-1 md:w-auto md:order-1"
       id="navbar-search"
     >
       <div class="w-9/12 relative hidden md:block">
@@ -94,7 +93,7 @@
       </div>
 
       <ul
-        class="flex flex-col p-4 md:p-0 mt-4 font-medium border rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
+        class="flex flex-col p-4 md:p-0 md:pl-8 mt-4 font-medium border rounded-lg md:space-x-6 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
       >
         <li>
           <a
@@ -122,7 +121,7 @@
 
         <li>
           <a
-            href="#"
+            routerLink="/login"
             class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
             ><svg
               class="w-8 h-8 text-gray-800 dark:text-white"
