--- a/client/NoWait/src/styles.css
+++ b/client/NoWait/src/styles.css
@@ -1,4 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+/* Agrega la fuente Yanone Kaffeesatz */
+@import url("https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@200;300;400;500;600;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.text-yanone {
+    font-family: "Yanone Kaffeesatz", sans-serif;
+
+}
