--- a/client/NoWait/src/app/app.component.html
+++ b/client/NoWait/src/app/app.component.html
@@ -1,4 +1,12 @@
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
+<div class="absolute top-0 hidden md:block w-full">
+  <img src="../assets/rayetas/rayetarojaCirculo.png" alt="" class="relative top-96"/>
+  <span class="relative w-full">
+    <img src="../assets/rayetas/rayetaAmarillaOndas.png" alt="" class="relative w-full -bottom-16"/>
+    <img src="../assets/rayetas/rayetaRojaOjoIzQuierdo.png" alt="" class="absolute right-48 -top-16">
+    <img src="../assets/rayetas/rayeraRojaOjoDerecho.png" alt="" class="absolute right-0 top-0  ">
+  </span>
+</div>
 <!-- calcular la distancia con footer para quitar el scroll-->
 <app-footer></app-footer>
