--- a/client/NoWait/src/app/pages/home/home.component.html
+++ b/client/NoWait/src/app/pages/home/home.component.html
@@ -1,11 +1,12 @@
 <app-banner-home></app-banner-home>
 
-<div class="text-center w-full">
-
+<div class="text-center w-full relative">
+        <img src="./assets/rayetas/rayetaRoja.png" alt="" class="absolute -top-64 w-full md:hidden">
+        <img src="./assets/rayetas/rayetaAmarilla.png" alt="" class="absolute bottom-0 w-full md:hidden">
     <div class="my-16">
         <h1 class="text-3xl text-center text-yanone font-bold">PROMOCIONES</h1>
     </div>
-    <div class="flex flex-col lg:flex-row justify-center gap-[60px] mb-16 w-full">
+    <div class="flex flex-col lg:flex-row justify-center gap-[60px] mb-16 w-full z-40 relative">
 
         <app-card imgSrc="assets/imgs/promos/promo-1.jpg"></app-card>
         <app-card imgSrc="assets/imgs/promos/promo-2.jpg"></app-card>
