logic de login implementada

--- a/client/NoWait/src/app/shared/components/banners/banner-home/banner-home.component.html
+++ b/client/NoWait/src/app/shared/components/banners/banner-home/banner-home.component.html
@@ -1,5 +1,5 @@
 <div class="h-screen box w-full max-lg:flex justify-center items-center relative" style="
-    background-image: url(assets/Food.png);
+    background-image: url(assets/Food.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
