--- a/client/NoWait/src/app/pages/auth/pages/login/login.component.html
+++ b/client/NoWait/src/app/pages/auth/pages/login/login.component.html
@@ -8,27 +8,29 @@
   "
 >
   <div class="login-container flex-1 md:bg-white md:h-screen flex items-center justify-center w-full">
-    <form
-      class="bg-[#E2C30A] w-[85%] md:w-[70%] md:h-[400px] h-[270px] rounded-2xl shadow-2xl flex flex-col items-center justify-center gap-4 md:gap-16 "
+    <form [formGroup]="formLogin"
+      class="py-11  bg-[#E2C30A] w-[300px] md:w-[70%] md:h-[auto] rounded-2xl shadow-2xl flex flex-col items-center justify-center gap-4 md:gap-8 "
     >
       <h1 class="text- md:text-3xl font-bold text-[#56523D]">LOGIN</h1>
       <div class="flex flex-col items-center gap-4">
-        <input
+        <!-- TODO: Agregar tooltips de errores -->
+        <input formControlName="email"
           type="text"
           name="username"
           placeholder="Email"
-          class="px-4 py-2 rounded-md w-64 outline-none border-none shadow-inner placeholder:text-gray-300"
+          class="px-4 py-2 rounded-md w-[200px] h-[36px] md:w-64 outline-none border-none shadow-inner placeholder:text-gray-300"
         />
-        <input
+        <!-- TODO: Agregar tooltips de errores -->
+        <input formControlName="password"
           type="password"
           name="password"
           placeholder="Contraseña"
-          class="px-4 py-2 rounded-md w-64 outline-none border-none shadow-inner placeholder:text-gray-300"
+          class="px-4 py-2 mt-2 rounded-md w-[200px] h-[36px] md:w-64 outline-none border-none shadow-inner placeholder:text-gray-300"
         />
       </div>
-      <button
-        type="submit"
-        class="bg-[#F4DA5D] font-bold px-4 py-2 rounded-full shadow-lg shadow-bottom hover:bg-gray-200 transition-colors duration-300"
+      <button (click)="submitLogin()"
+        type="button" [disabled]="!submitState()"
+        class="mt-6 bg-[#F4DA5D] font-bold px-4 py-2 rounded-full shadow-lg shadow-bottom hover:bg-gray-200 transition-colors duration-300"
       >
         Iniciar sesión
       </button>
