correcciones de maquetado

--- a/client/NoWait/src/app/shared/components/banners/banner-home/banner-home.component.html
+++ b/client/NoWait/src/app/shared/components/banners/banner-home/banner-home.component.html
@@ -1,4 +1,4 @@
-<div class="h-screen box w-full max-lg:flex justify-center items-center relative" style="
+<div class="min-h-container box w-full max-lg:flex justify-center items-center relative md:h-screen" style="
     background-image: url(assets/Food.png);
     background-size: cover;
     background-position: center;
