--- a/client/NoWait/src/app/pages/login/login.component.html
+++ b/client/NoWait/src/app/pages/login/login.component.html
@@ -1,5 +1,5 @@
 <div
-  class="login-container w-full h-screen flex flex-col items-center justify-evenly py-8 md:py-0 md:flex-row-reverse"
+  class="login-container w-full h-[--min-main-container] flex flex-col items-center justify-evenly py-8 md:py-0 md:flex-row-reverse"
   style="
     background-image: url(assets/login-bg-full.jpeg);
     background-repeat: no-repeat;
@@ -8,10 +8,10 @@
   "
 >
   <div
-    class="login-container flex-1 md:bg-white md:h-screen flex items-center justify-center w-full"
+    class="login-container flex-1 md:bg-white md:h-full flex items-center justify-center w-full"
   >
     <form
-      class="bg-[#E2C30A] w-[85%] md:w-[70%] md:h-[400px] h-[270px] rounded-2xl shadow-2xl flex flex-col items-center justify-center gap-4 md:gap-16"
+      class="bg-[#E2C30A] w-[85%] md:w-[70%] md:h-[400px] h-[270px] rounded-2xl shadow-2xl flex flex-col items-center justify-center gap-4 md:gap-16 z-20"
     >
       <h1 class="text- md:text-3xl font-bold text-[#56523D]">LOGIN</h1>
       <div class="flex flex-col items-center gap-4">
