--- a/client/NoWait/src/app/pages/auth/pages/login/login.component.html
+++ b/client/NoWait/src/app/pages/auth/pages/login/login.component.html
@@ -1,21 +1,56 @@
-<div class="login-container w-full h-screen flex flex-col items-center justify-evenly py-8 md:py-0 md:flex-row-reverse"
+<div
+  class="relative w-full h-[--min-main-container] flex flex-col items-center justify-evenly py-8 md:py-0 md:flex-row-reverse"
   style="
     background-image: url(assets/login-bg-full.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
   ">
-  <div class="login-container flex-1 md:bg-white md:h-screen flex items-center justify-center w-full">
+  <div class="min-h-container flex-1 md:bg-white flex items-center justify-center w-full">
     <form [formGroup]="formLogin"
-      class="py-11  bg-[#E2C30A] w-[300px] md:w-[70%] md:h-[auto] rounded-2xl shadow-2xl flex flex-col items-center justify-center gap-4 md:gap-8 ">
+      class="py-11  bg-[#E2C30A] w-[300px] md:w-[70%] md:h-[auto] rounded-2xl shadow-2xl flex flex-col items-center justify-center gap-4 md:gap-8 md:z-10">
       <h1 class="text- md:text-3xl font-bold text-[#56523D]">LOGIN</h1>
       <div class="flex flex-col items-center gap-4">
-        <!-- TODO: Agregar tooltips de errores -->
-        <input formControlName="email" type="text" name="username" placeholder="Email"
-          class="px-4 py-2 rounded-md w-[200px] h-[36px] md:w-64 outline-none border-none shadow-inner placeholder:text-gray-300" />
-        <!-- TODO: Agregar tooltips de errores -->
-        <input formControlName="password" type="password" name="password" placeholder="Contraseña"
-          class="px-4 py-2 mt-2 rounded-md w-[200px] h-[36px] md:w-64 outline-none border-none shadow-inner placeholder:text-gray-300" />
+        <!-- Campo de email -->
+        <div class="relative">
+          <input formControlName="email" type="text" name="username" placeholder="Email"
+            class="px-4 py-2 rounded-md w-[200px] h-[36px] md:w-64 outline-none border-none shadow-inner placeholder:text-gray-300" />
+
+          @if(email.touched && email.errors?.['required']){
+          <div class="absolute -top-[110%] px-3 py-2 text-sm font-medium rounded-lg shadow-sm  bg-red-600">
+            Email Requerido
+            <div class="tooltip-arrow"></div>
+          </div>
+          }@if(email.touched && email.errors?.['email']){
+          <div class="absolute -top-[110%] px-3 py-2 text-sm font-medium rounded-lg shadow-sm  bg-red-600">
+            Email invalido
+            <div class="tooltip-arrow"></div>
+          </div>
+          }
+        </div>
+
+        <!-- Campo de Contraseña -->
+        <div class="relative">
+          <input formControlName="password" type="password" name="password" placeholder="Contraseña"
+            class="px-4 py-2 mt-2 rounded-md w-[200px] h-[36px] md:w-64 outline-none border-none shadow-inner placeholder:text-gray-300" />
+          @if(password.touched && password.errors?.['required']){
+          <div class="absolute -bottom-[110%] px-3 py-2 text-sm font-medium rounded-lg shadow-sm  bg-red-600">
+            Contraseña Requerido
+            <div class="tooltip-arrow"></div>
+          </div>
+          }@if(password.touched && password.errors?.['pattern'] ){
+          <div class="absolute top-[110%] px-3 py-2 text-sm font-medium rounded-lg shadow-sm  bg-red-600">
+            <p>Debe contener minimo 6 caracteres.</p>
+            <p>
+              Contraseña debe contener: </p>
+            <p>- al menos una minuscula o mayusculas.</p>
+            <p>- al menos numero.</p>
+            <p>- al menos una u caracter ({{"@$!%*?&"}}).</p>
+            <div class="tooltip-arrow"></div>
+          </div>
+          }
+        </div>
+
       </div>
       <button (click)="submitLogin()" type="button" [disabled]="!submitState()"
         class="mt-6 bg-[#F4DA5D] font-bold px-4 py-2 rounded-full shadow-lg shadow-bottom hover:bg-gray-200 transition-colors duration-300">
@@ -28,4 +63,50 @@
       style="background-image: url('assets/login-bg-full.jpeg')"></div>
     <img src="assets/Logo-Circulo.png" alt="" class="h-28 z-50 md:h-48" />
   </div>
+
+  <!-- Tooltip Spinner -->
+  @if (showSpinnerLogin()){
+  <!-- @if (true){ -->
+  <div id="toast-simple"
+    class="flex items-center w-full max-w-xs p-4 space-x-4 rtl:space-x-reverse text-gray-500 bg-white divide-x rtl:divide-x-reverse divide-gray-200 rounded-lg dark:text-gray-400 dark:divide-gray-700 space-x dark:bg-gray-800 absolute bottom-[40px] z-50 shadow-sm shadow-gray-400"
+    role="alert">
+    <svg aria-hidden="true" class="w-8 h-8 text-gray-200 animate-spin dark:text-gray-600 fill-blue-600"
+      viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path
+        d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z"
+        fill="currentColor" />
+      <path
+        d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z"
+        fill="currentFill" />
+    </svg>
+    <span class="sr-only">Loading...</span>
+    <div class="ps-4 text-sm font-normal text-gray-700">Cargando</div>
+  </div>
+  }
+
+  @if(showUnauthorization()){
+  <div id="toast-danger"
+    class="flex items-center w-full max-w-xs p-4 text-gray-500 bg-white rounded-lg dark:text-gray-400 dark:bg-gray-800 absolute bottom-[40px] z-50 shadow-sm shadow-gray-400"
+    role="alert">
+    <div
+      class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-red-500 bg-red-100 rounded-lg dark:bg-red-800 dark:text-red-200">
+      <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+        viewBox="0 0 20 20">
+        <path
+          d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 11.793a1 1 0 1 1-1.414 1.414L10 11.414l-2.293 2.293a1 1 0 0 1-1.414-1.414L8.586 10 6.293 7.707a1 1 0 0 1 1.414-1.414L10 8.586l2.293-2.293a1 1 0 0 1 1.414 1.414L11.414 10l2.293 2.293Z" />
+      </svg>
+      <span class="sr-only">Error icon</span>
+    </div>
+    <div class="ms-3 text-sm font-normal text-gray-700">Usuario o contraseña incorrecta.</div>
+    <button type="button" (click)="showUnauthorization.set(false)"
+      class="ms-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex items-center justify-center h-8 w-8 dark:text-gray-500 dark:hover:text-white dark:bg-gray-800 dark:hover:bg-gray-700"
+      data-dismiss-target="#toast-danger" aria-label="Close">
+      <span class="sr-only">Close</span>
+      <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+          d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+      </svg>
+    </button>
+  </div>
+  }
 </div>
