--- a/client/NoWait/src/styles.css
+++ b/client/NoWait/src/styles.css
@@ -7,7 +7,7 @@
 @tailwind utilities;
 
 :root {
-    --min-main-container: calc(100dvh - 88px);
+    --min-main-container: calc(100svh - 88px);
 }
 
 
