--- a/client/NoWait/src/app/pages/auth/pages/login/login.component.html
+++ b/client/NoWait/src/app/pages/auth/pages/login/login.component.html
@@ -7,24 +7,27 @@
     background-position: center;
   ">
   <div class="min-h-container flex-1 md:bg-white flex items-center justify-center w-full">
-    <form [formGroup]="formLogin"
+    <form [formGroup]="formLogin" (submit)="submitLogin()"
       class="py-11  bg-[#E2C30A] w-[300px] md:w-[70%] md:h-[auto] rounded-2xl shadow-2xl flex flex-col items-center justify-center gap-4 md:gap-8 md:z-10">
       <h1 class="text- md:text-3xl font-bold text-[#56523D]">LOGIN</h1>
       <div class="flex flex-col items-center gap-4">
         <!-- Campo de email -->
         <div class="relative">
           <input formControlName="email" type="text" name="username" placeholder="Email"
-            class="px-4 py-2 rounded-md w-[200px] h-[36px] md:w-64 outline-none border-none shadow-inner placeholder:text-gray-300" />
+            class="px-4 py-2 rounded-md w-[220px] h-[36px] md:w-64 outline-none border-none shadow-inner placeholder:text-gray-400" />
 
+          <!-- Errores de email -->
           @if(email.touched && email.errors?.['required']){
-          <div class="absolute -top-[110%] px-3 py-2 text-sm font-medium rounded-lg shadow-sm  bg-red-600">
+          <div
+            class="absolute bottom-[calc(100%_+_4px)] px-3 py-2 text-sm font-medium rounded-lg shadow-sm  bg-[--warning]">
             Email Requerido
-            <div class="tooltip-arrow"></div>
+            <div class="tooltip-arrow before:visible after:hidden -bottom-1"></div>
           </div>
-          }@if(email.touched && email.errors?.['email']){
-          <div class="absolute -top-[110%] px-3 py-2 text-sm font-medium rounded-lg shadow-sm  bg-red-600">
+          }@if(email.touched && email.errors?.['pattern']){
+          <div
+            class="absolute bottom-[calc(100%_+_4px)] px-3 py-2 text-sm font-medium rounded-lg shadow-sm  bg-[--warning]">
             Email invalido
-            <div class="tooltip-arrow"></div>
+            <div class="tooltip-arrow before:visible after:hidden -bottom-1"></div>
           </div>
           }
         </div>
@@ -32,27 +35,36 @@
         <!-- Campo de Contraseña -->
         <div class="relative">
           <input formControlName="password" type="password" name="password" placeholder="Contraseña"
-            class="px-4 py-2 mt-2 rounded-md w-[200px] h-[36px] md:w-64 outline-none border-none shadow-inner placeholder:text-gray-300" />
+            class="px-4 py-2 mt-2 rounded-md w-[220px] h-[36px] md:w-64 outline-none border-none shadow-inner placeholder:text-gray-400" />
+          <!-- Errores de Contraseña -->
           @if(password.touched && password.errors?.['required']){
-          <div class="absolute -bottom-[110%] px-3 py-2 text-sm font-medium rounded-lg shadow-sm  bg-red-600">
+          <div
+            class="absolute top-[calc(100%_+_4px)] px-3 py-2 text-sm font-medium rounded-lg shadow-sm  bg-[--warning]">
             Contraseña Requerido
-            <div class="tooltip-arrow"></div>
+            <div class="tooltip-arrow before:visible after:hidden -top-1"></div>
           </div>
-          }@if(password.touched && password.errors?.['pattern'] ){
-          <div class="absolute top-[110%] px-3 py-2 text-sm font-medium rounded-lg shadow-sm  bg-red-600">
+          }
+          @if(password.touched && password.errors?.['minlength'] ){
+          <div
+            class="absolute top-[calc(100%_+_4px)] px-3 py-2 text-sm font-medium rounded-lg shadow-sm bg-[--warning]">
             <p>Debe contener minimo 6 caracteres.</p>
-            <p>
-              Contraseña debe contener: </p>
+            <div class="tooltip-arrow before:visible after:hidden -top-1"></div>
+          </div>
+          }
+          @if(password.touched && password.errors?.['pattern'] ){
+          <div
+            class="absolute top-[calc(100%_+_4px)] px-3 py-2 text-sm font-medium rounded-lg shadow-sm  bg-[--warning]">
+            <p>Contraseña debe contener: </p>
             <p>- al menos una minuscula o mayusculas.</p>
             <p>- al menos numero.</p>
-            <p>- al menos una u caracter ({{"@$!%*?&"}}).</p>
-            <div class="tooltip-arrow"></div>
+            <p>- al menos una u caracter ({{"!@#$%^&*()\\-_=+{};:,\<.>"}}).</p>
+            <div class="tooltip-arrow before:visible after:hidden -top-1"></div>
           </div>
           }
         </div>
 
       </div>
-      <button (click)="submitLogin()" type="button" [disabled]="!submitState()"
+      <button type="submit" [disabled]="!submitState()"
         class="mt-6 bg-[#F4DA5D] font-bold px-4 py-2 rounded-full shadow-lg shadow-bottom hover:bg-gray-200 transition-colors duration-300">
         Iniciar sesión
       </button>
@@ -66,7 +78,6 @@
 
   <!-- Tooltip Spinner -->
   @if (showSpinnerLogin()){
-  <!-- @if (true){ -->
   <div id="toast-simple"
     class="flex items-center w-full max-w-xs p-4 space-x-4 rtl:space-x-reverse text-gray-500 bg-white divide-x rtl:divide-x-reverse divide-gray-200 rounded-lg dark:text-gray-400 dark:divide-gray-700 space-x dark:bg-gray-800 absolute bottom-[40px] z-50 shadow-sm shadow-gray-400"
     role="alert">
@@ -89,7 +100,7 @@
     class="flex items-center w-full max-w-xs p-4 text-gray-500 bg-white rounded-lg dark:text-gray-400 dark:bg-gray-800 absolute bottom-[40px] z-50 shadow-sm shadow-gray-400"
     role="alert">
     <div
-      class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-red-500 bg-red-100 rounded-lg dark:bg-red-800 dark:text-red-200">
+      class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-[--warning] bg-red-100 rounded-lg dark:bg-red-800 dark:text-red-200">
       <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
         viewBox="0 0 20 20">
         <path
