--- a/client/NoWait/src/app/pages/test/test.component.html
+++ b/client/NoWait/src/app/pages/test/test.component.html
@@ -59,3 +59,14 @@
 <!-- {{this.formLogin.errors | json}}
 {{email.errors | json}}
 {{password.errors | json}} -->
+
+<div>
+    <button (click)="addItem()"
+        class="mt-6 bg-[#F4DA5D] font-bold px-4 py-2 rounded-full shadow-lg shadow-bottom hover:bg-gray-200 transition-colors duration-300">
+        Agregar Item
+    </button>
+    <button (click)="removeItem()"
+        class="mt-6 bg-[#F4DA5D] font-bold px-4 py-2 rounded-full shadow-lg shadow-bottom hover:bg-gray-200 transition-colors duration-300">
+        eliminar Item
+    </button>
+</div>
