--- a/client/NoWait/src/styles.css
+++ b/client/NoWait/src/styles.css
@@ -8,7 +8,13 @@
 
 :root {
     --min-main-container: calc(100svh - 88px);
-    --warning: #FF1D25
+
+
+    --warning: #FF1D25;
+    /*  */
+    --color-primary: #FF0000;
+    --color-secundary: #E2C30A;
+    --color-info: #45BAAC;
 }
 
 
