arreglos para el deploy

--- a/client/NoWait/src/app/app.component.html
+++ b/client/NoWait/src/app/app.component.html
@@ -3,13 +3,11 @@
 
   <router-outlet></router-outlet>
 </main>
-  <div class="absolute top-0 hidden md:block w-full md:h-full overflow-hidden">
-    <img src="../assets/rayetas/rayetarojaCirculo.png" alt="" class="relative top-96" />
-    <span class="relative md:absolute w-full md:h-full md:top-0 md:overflow-hidden">
-      <img src="../assets/rayetas/rayetaAmarillaOndas.png" alt="" class="relative w-full -bottom-16 md:absolute " />
-      <img src="../assets/rayetas/rayetaRojaOjoIzQuierdo.png" alt="" class="absolute right-48 -top-16">
-      <img src="../assets/rayetas/rayeraRojaOjoDerecho.png" alt="" class="absolute right-0 top-0  ">
-    </span>
-  </div>
-<!-- calcular la distancia con footer para quitar el scroll-->
+<div class="absolute top-0 right-0 w-full h-full overflow-hidden -z-40">
+  <img src="assets/rayetas/rayetarojaCirculo.png" alt="" class="relative top-96" />
+  <img src="assets/rayetas/rayetaAmarillaOndas.png" alt="" class="w-full -bottom-[140px] right-0 absolute" />
+  <img src="assets/rayetas/rayetaRojaOjoIzQuierdo.png" alt="" class="absolute right-[220px] bottom-[560px]">
+  <img src="assets/rayetas/rayeraRojaOjoDerecho.png" alt="" class="absolute right-[50px] bottom-[540px]">
+  <img src="assets/rayetas/rayeraAmarillaOnda.png" alt="" class="absolute right-0 top-0  ">
+</div>
 <app-footer></app-footer>
