--- a/client/NoWait/src/app/shared/components/banners/banner-home/banner-home.component.html
+++ b/client/NoWait/src/app/shared/components/banners/banner-home/banner-home.component.html
@@ -1,5 +1,5 @@
 <div class="min-h-container box w-full max-lg:flex justify-center items-center relative md:h-screen" style="
-    background-image: url(assets/Food.jpg);
+    background-image: url(assets/Food-short1.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
