--- a/client/NoWait/src/app/shared/components/navbar-footer/navbar.component.html
+++ b/client/NoWait/src/app/shared/components/navbar-footer/navbar.component.html
@@ -1,9 +1,10 @@
-<nav class="fixed bg-white bottom-0 w-full h-[88px] text-2xl text-[#56523D] md:hidden z-50">
+<nav class="fixed bg-[#F8F8F8] bottom-0 w-full h-[88px] text-2xl text-[#56523D] md:hidden z-50">
   <article class="relative grid grid-cols-5 grid-rows-1 place-items-center h-full">
     <span routerLink="/"><i class="fa-solid fa-house-chimney"></i></span>
-    <span><i class="fa-solid fa-magnifying-glass"></i></span>
-    <span class=" w-full grid place-items-center mb-8 shadow-md shadow-gray-900 h-[113px] bg-white rounded-t-full ">
-      <img src="../assets/nowait.svg" alt="" class="h-[30px] w-[40px]" />
+    <!-- TODO: Cambiar a modal cuando este listo -->
+    <span routerLink="/search"><i class="fa-solid fa-magnifying-glass"></i></span>
+    <span class="grid place-items-center mb-6 drop-shadow-lg h-[100px] w-[80px] bg-[#DBD9D9] rounded-t-full">
+      <img src="assets/nowait-yellow-dark.svg" alt="" class="h-[30px] w-[40px]" />
     </span>
     <span><i class="fa-solid fa-gift"></i></span>
     <span routerLink="/auth"><i class="fa-regular fa-user"></i></span>
