--- a/client/NoWait/src/styles.css
+++ b/client/NoWait/src/styles.css
@@ -8,6 +8,11 @@
 
 :root {
     --min-main-container: calc(100svh - 88px);
+
+    --space-t-navbar: 8px;
+    --h-navbar: 56px;
+
+    --m-t-content: calc(var(--space-t-navbar) + var(--h-navbar));
     --warning: #FF1D25
 }
 
