--- a/client/NoWait/src/app/pages/auth/pages/login/login.component.html
+++ b/client/NoWait/src/app/pages/auth/pages/login/login.component.html
@@ -1,12 +1,11 @@
 <div
-  class="relative w-full h-[--min-main-container] flex flex-col items-center justify-evenly py-8 md:py-0 md:flex-row-reverse"
+  class="relative bg-[url('assets/login-bg-full.jpeg')] md:bg-none w-full h-[--min-main-container] flex flex-col items-center justify-evenly py-8 md:py-0 md:flex-row-reverse"
   style="
-    background-image: url(assets/login-bg-full.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
   ">
-  <div class="min-h-container flex-1 md:bg-white flex items-center justify-center w-full">
+  <div class="min-h-container flex-1 md:bg-transparent flex items-center justify-center w-full">
     <form [formGroup]="formLogin" (submit)="submitLogin()"
       class="py-11  bg-[#E2C30A] w-[300px] md:w-[70%] md:h-[auto] rounded-2xl shadow-2xl flex flex-col items-center justify-center gap-4 md:gap-8 md:z-10">
       <h1 class="text- md:text-3xl font-bold text-[#56523D]">LOGIN</h1>
