--- a/client/NoWait/src/app/pages/search/search.component.html
+++ b/client/NoWait/src/app/pages/search/search.component.html
@@ -1,1 +1,14 @@
-<app-card-shop></app-card-shop>
+<div class="pt-[--m-t-content] text-yanone w-full mb-9 bg-transparent">
+
+    <div class="flex font-abc w-[390px] pt-[32px] md:flex-row">
+        <h1 class="text-[16px] ml-8 mr-4">Resultados de búsqueda: </h1>
+        <span>HAMBURGUESAS</span>
+    </div>
+
+    <div class="flex flex-col w-full items-center justify-center gap-6 px-6 mt-4 md:flex-row md:flex-wrap">
+        <!-- card de los resultados -->
+        @for (item of listResult; track $index) {
+        <app-card-shop [item-resul]="item"></app-card-shop>
+        }
+    </div>
+</div>
