feat(front): logica de busqueda de comida
consumo de la api para la busqueda de comidas
rederizacion de los resultados

refs:(#74)

--- a/client/NoWait/src/app/pages/search/components/card-shop/card-shop.component.html
+++ b/client/NoWait/src/app/pages/search/components/card-shop/card-shop.component.html
@@ -1,6 +1,6 @@
 <div class="bg-white w-full max-w-[330px] h-[130px] flex rounded-lg drop-shadow-xl shadow-lg font-abc ">
     <div>
-        <img class="w-[106px] h-[106px] ml-[17px] mt-[11.5px] rounded-full  object-cover" [src]="item.url" />
+        <img class="w-[106px] h-[106px] ml-[17px] mt-[11.5px] rounded-full  object-cover" [src]="item.imageUrl" />
     </div>
 
     <div class=" mt-[22px] ml-[24px]  w-[155px] h-[68px] font-abc]">
