--- a/client/NoWait/src/app/pages/search/search.component.html
+++ b/client/NoWait/src/app/pages/search/search.component.html
@@ -2,13 +2,22 @@
 
     <div class="flex font-abc w-[390px] pt-[32px] md:flex-row">
         <h1 class="text-[16px] ml-8 mr-4">Resultados de búsqueda: </h1>
-        <span>HAMBURGUESAS</span>
+        <span>{{qSearch()| uppercase}}</span>
     </div>
 
     <div class="flex flex-col w-full items-center justify-center gap-6 px-6 mt-4 md:flex-row md:flex-wrap">
+        @if (finishSearch()) {
         <!-- card de los resultados -->
-        @for (item of listResult; track $index) {
+        @for (item of listResult(); track $index) {
         <app-card-shop [item-resul]="item"></app-card-shop>
+        }
+        @empty {
+        <!-- TODO: falta maquetar -->
+        <p>no se encontraron elementos</p>
+        }
+        }@else {
+        <!-- TODO: Falta maquetar -->
+        <p>buscando ...</p>
         }
     </div>
 </div>
