base para el modal de buscar

--- a/client/NoWait/src/app/pages/auth/pages/login/login.component.html
+++ b/client/NoWait/src/app/pages/auth/pages/login/login.component.html
@@ -63,8 +63,9 @@
         </div>
 
       </div>
+      <!-- Agregar hover y disable -->
       <button type="submit" [disabled]="!submitState()"
-        class="mt-6 bg-[#F4DA5D] font-bold px-4 py-2 rounded-full shadow-lg shadow-bottom hover:bg-gray-200 transition-colors duration-300">
+        class="mt-6 bg-[#F4DA5D] font-bold px-4 py-2 rounded-full shadow-lg shadow-bottom drop-shadow-md text-black hover:bg-white ">
         Iniciar sesión
       </button>
     </form>
