--- a/client/NoWait/src/app/pages/test/test.component.html
+++ b/client/NoWait/src/app/pages/test/test.component.html
@@ -1,5 +1,5 @@
 <div class="w-full h-[100vh] pt-40 ">
-    <div class="flex-1 md:bg-white flex items-center justify-center w-full">
+    <div class="flex-1 bg-transparent flex items-center justify-center w-full">
         <form
             class="py-11  bg-[#E2C30A] w-[300px] md:w-[70%] md:h-[auto] rounded-2xl shadow-2xl flex flex-col items-center justify-center gap-4 md:gap-8 md:z-10">
             <!-- Modal toggle -->
