--- a/client/NoWait/src/app/shared/components/modals/search-modal/search-modal.component.html
+++ b/client/NoWait/src/app/shared/components/modals/search-modal/search-modal.component.html
@@ -8,10 +8,11 @@
 </div>
 }
 -->
+
 <app-main-modal [showModal]="showModal">
     <div class="relative w-[calc(100%_-_4rem)] max-w-[800px] max-h-full m-auto mt-10 ">
-        <div class="relative rounded-lg shadow dark:bg-gray-700">
-            <form [formGroup]="formSearch" class="mx-auto flex flex-row gap-2">
+        <div class="relative rounded-2xl shadow dark:bg-gray-700">
+            <form [formGroup]="formSearch" class="mx-auto flex flex-row gap-2" (submit)="searchFood()">
                 <label for="default-search" class="mb-2 text-sm font-medium text-gray-900 sr-only ">Search</label>
                 <div class="relative flex-1">
                     <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
@@ -21,23 +22,25 @@
                                 d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
                         </svg>
                     </div>
-                    <input type="search" id="default-search" formControlName="query"
-                        class="block w-full p-3 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                    <input #inputSearch type="search" id="default-search" formControlName="query"
+                        class="block w-full p-3 ps-10 text-sm text-gray-900 border border-gray-300 rounded-2xl bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                         placeholder="Search Mockups, Logos..." required />
                 </div>
                 <div class="flex justify-center items-center">
 
-                    <button
-                        class="text-white end-2.5 bottom-2.5 bg-yellow-400 hover:bg-yellow-800 focus:ring-4 focus:outline-none focus:ring-yellow-300 font-medium rounded-lg text-sm px-4 py-3">Buscar</button>
+                    <button type="submit" class=" inline-flex items-center w-max h-10 justify-center text-lg text-white rounded-2xl px-4 border bg-[--info] shadow-lg drop-shadow-md hover:text-black hover:bg-white
+                            border-[--info]" aria-controls="navbar-search" aria-expanded="false">
+                        <samp class="">Buscar</samp>
+                    </button>
+
                 </div>
             </form>
-
             <!--  mostar solo cuando el backend devuelva un array no vacio -->
-            @if (query.value.trim()) {
+            <!-- @if (query.value.trim()) {
             <div class="absolute h-72 top-[calc(100%_+_8px)] rounded-lg border border-gray-300 bg-gray-50 w-full p-4">
                 resultados de busqueda
             </div>
-            }
+            } -->
         </div>
     </div>
 </app-main-modal>
