--- a/client/NoWait/src/app/shared/components/sctruct/navbar-footer/navbar.component.html
+++ b/client/NoWait/src/app/shared/components/sctruct/navbar-footer/navbar.component.html
@@ -2,7 +2,7 @@
   <article class="relative grid grid-cols-5 grid-rows-1 place-items-center h-full">
     <span routerLink="/"><i class="fa-solid fa-house-chimney"></i></span>
     <!-- TODO: Cambiar a modal cuando este listo -->
-    <span routerLink="/search"><i class="fa-solid fa-magnifying-glass"></i></span>
+    <span (click)="showSearchModal.set(true)"><i class="fa-solid fa-magnifying-glass"></i></span>
     <span class="grid place-items-center mb-6 drop-shadow-lg h-[100px] w-[80px] bg-[#DBD9D9] rounded-t-full">
       <img src="assets/nowait-yellow-dark.svg" alt="" class="h-[30px] w-[40px]" />
     </span>
