feat(back): Modal de busque de comida
modal de busque de comida con maquetado y logica

ref: (#68)

--- a/client/NoWait/src/app/pages/auth/pages/login/login.component.html
+++ b/client/NoWait/src/app/pages/auth/pages/login/login.component.html
@@ -73,7 +73,7 @@
   <div class="md:flex-1 flex items-center justify-center relative md:h-full">
     <div class="hidden md:block md:bg-cover bg-center md:absolute inset-0 md:h-full md:w-[50vw]"
       style="background-image: url('assets/login-bg-full.jpeg')"></div>
-    <img src="assets/Logo-Circulo.png" alt="" class="h-28 z-50 md:h-48" />
+    <img src="assets/Logo-Circulo.png" alt="" class="h-28 md:h-48 motion-reduce:animate-pulse" />
   </div>
 
   <!-- Tooltip Spinner -->
