--- a/client/NoWait/src/app/pages/search/search.component.html
+++ b/client/NoWait/src/app/pages/search/search.component.html
@@ -13,7 +13,7 @@
         }
         @empty {
         <!-- TODO: falta maquetar -->
-        <p>no se encontraron elementos</p>
+        <p>no se encontraron resultados</p>
         }
         }@else {
         <!-- TODO: Falta maquetar -->
