--- a/client/NoWait/src/app/shared/components/banners/banner-home/banner-home.component.html
+++ b/client/NoWait/src/app/shared/components/banners/banner-home/banner-home.component.html
@@ -10,6 +10,8 @@
     <h1 class="text-3xl font-extrabold">BIENVENIDOS A NO WAIT!</h1>
   </div>
 
+  <!-- <img src="assets/Logo-Circulo.png" alt=""
+    class="absolute bottom-20 w-[12rem] lg:right-16 lg:top-40 md:w-[15rem] lg:translate-x-0" /> -->
   <img src="assets/Logo-Circulo.png" alt=""
-    class="absolute bottom-20 w-[12rem] lg:right-16 lg:top-40 md:w-[15rem] lg:translate-x-0" />
+    class="absolute bottom-20 w-[12rem] lg:right-16 lg:top-40 md:w-[15rem] lg:translate-x-0 motion-reduce:animate-pulse" />
 </div>
