--- a/client/NoWait/src/app/shared/components/modals/main-modal/main-modal.component.html
+++ b/client/NoWait/src/app/shared/components/modals/main-modal/main-modal.component.html
@@ -3,5 +3,7 @@
 <div id="default-modal" tabindex="-1" aria-hidden="true" (click)="modalEvent($event)"
     class="flex overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 w-full md:inset-0 h-full max-h-full">
     <ng-content></ng-content>
+
 </div>
 }
+{{activateSroll()}}
