--- a/client/NoWait/src/app/shared/components/sctruct/navbar/navbar.component.html
+++ b/client/NoWait/src/app/shared/components/sctruct/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav
-  class="h-[--h-navbar] md:bg-[#E2C30A] rounded-[20px] mx-9 absolute mt-[--space-t-navbar] top-0 left-0 right-0 z-50 md:px-5 md:mt-[--space-t-navbar]">
+  class="h-[--h-navbar] md:bg-[#E2C30A] rounded-[20px] mx-9 absolute mt-[--space-t-navbar] top-0 left-0 right-0 z-50 md:px-5 md:mt-[--space-t-navbar] md:drop-shadow-md md:shadow">
   <div class="flex flex-wrap items-center justify-between py-2">
     <a routerLink="/home" class="flex">
       <img src="assets/nowait.svg" class="h-7" alt="Flowbite Logo" />
@@ -21,7 +21,7 @@
           class="block w-full p-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 placeholder:text-lg"
           placeholder="Buscar comercio, comida o categoria" />
       </div> -->
-      <button (click)="showSearchModal.set(true)" class=" inline-flex items-center w-max h-10 justify-center text-lg text-white rounded-2xl px-4 border bg-[--info] shadow-lg drop-shadow-md hover:text-black hover:bg-white
+      <button (click)="showSearchModal.set(true)" class=" inline-flex items-center w-max h-10 justify-center text-lg text-white rounded-2xl px-4 border-4 bg-[--info] shadow shadow-gray-500 drop-shadow hover:text-black hover:bg-white
         border-[--info]" aria-controls="navbar-search" aria-expanded="false">
         <i class="fa-solid fa-magnifying-glass"></i>
         <samp class="pl-4">Buscar</samp>
