--- a/client/NoWait/src/app/shared/components/sctruct/footer/footer.component.html
+++ b/client/NoWait/src/app/shared/components/sctruct/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="hidden bg-[#45BAAC] w-full h-[88px] md:block">
+<footer class="hidden bg-[#45BAAC] w-full h-[--space-h-footer] md:block">
 
     <div class="flex text-white space-x-16 pt-5 pl-12">
         <a href="#">
