--- a/client/NoWait/src/app/shared/components/sctruct/navbar-footer/navbar.component.html
+++ b/client/NoWait/src/app/shared/components/sctruct/navbar-footer/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="fixed bg-[#F8F8F8] bottom-0 w-full h-[88px] text-2xl text-[#56523D] md:hidden z-50">
+<nav class="fixed bg-[#F8F8F8] bottom-0 w-full h-[--space-h-footer] text-2xl text-[#56523D] md:hidden z-50">
   <article class="relative grid grid-cols-5 grid-rows-1 place-items-center h-full">
     <span routerLink="/"><i class="fa-solid fa-house-chimney"></i></span>
     <!-- TODO: Cambiar a modal cuando este listo -->
