--- a/client/NoWait/src/app/pages/home/home.component.html
+++ b/client/NoWait/src/app/pages/home/home.component.html
@@ -4,9 +4,9 @@
     <img src="./assets/rayetas/rayetaRoja.png" alt="" class="absolute -top-64 w-full md:hidden">
     <img src="./assets/rayetas/rayetaAmarilla.png" alt="" class="absolute bottom-0 w-full md:hidden">
     <div class="my-16">
-        <h1 class="text-3xl text-center text-yanone font-bold">PROMOCIONES</h1>
+        <h1 class="text-3xl text-center text-yanone font-bold text-[#56523D]">PROMOCIONES</h1>
     </div>
-    <div class="flex flex-col lg:flex-row justify-center gap-[60px] mb-16 w-full z-40 relative">
+    <div class="flex flex-col lg:flex-row justify-center gap-[60px] mb-12 w-full z-40 relative">
 
         <app-card-oferta imgSrc="assets/imgs/promos/promo-1.jpg"></app-card-oferta>
         <app-card-oferta imgSrc="assets/imgs/promos/promo-2.jpg"></app-card-oferta>
