--- a/client/NoWait/src/app/pages/test/test.component.html
+++ b/client/NoWait/src/app/pages/test/test.component.html
@@ -1,36 +1,40 @@
 <div class="w-full h-[100vh] pt-40 ">
     <div class="flex-1 bg-transparent flex items-center justify-center w-full">
-        <form
+        <div
             class="py-11  bg-[#E2C30A] w-[300px] md:w-[70%] md:h-[auto] rounded-2xl shadow-2xl flex flex-col items-center justify-center gap-4 md:gap-8 md:z-10">
-            <!-- Modal toggle -->
-            <button (click)="showSearchModal.set(true)"
-                class="block text-white bg-blue-700 hover:bg-blue-400 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-                type="button">
-                Search Modal
-            </button><button (click)="showCart.set(true)"
-                class="block text-white bg-blue-700 hover:bg-blue-400 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-                type="button">
-                Cart Modal
-            </button>
-        </form>
+
+            {{ cart()|json }}
+
+            <div>
+
+                @for (item of itemList; track $index) {
+                <div>
+                    <p>{{item.name}}: <span>{{item.amount}}</span></p>
+                    <button (click)="addItem( item)"
+                        class="mt-6 bg-[#F4DA5D] font-bold px-4 py-2 rounded-full shadow-lg shadow-bottom hover:bg-gray-200 transition-colors duration-300">
+                        Agregar Item
+                    </button>
+                </div>
+                }
+                @for (item of cart(); track $index) {
+                <div>
+                    <p>{{item.name}}: <span>{{item.amount}}</span></p>
+                    <button (click)="increaseItem($index)"
+                        class="mt-6 bg-[#F4DA5D] font-bold px-4 py-2 rounded-full shadow-lg shadow-bottom hover:bg-gray-200 transition-colors duration-300">
+                        increamentar Item
+                    </button>
+                    <button (click)="decreaseItem($index)"
+                        class="mt-6 bg-[#F4DA5D] font-bold px-4 py-2 rounded-full shadow-lg shadow-bottom hover:bg-gray-200 transition-colors duration-300">
+                        decrementar Item
+                    </button>
+                </div>
+                }
+            </div>
+        </div>
     </div>
 
     <app-search-modal [showModal]="showSearchModal"></app-search-modal>
 
     <app-shoppping-cart [showModal]="showCart">
     </app-shoppping-cart>
-</div>
-<!-- {{this.formLogin.errors | json}}
-{{email.errors | json}}
-{{password.errors | json}} -->
-
-<div>
-    <button (click)="addItem()"
-        class="mt-6 bg-[#F4DA5D] font-bold px-4 py-2 rounded-full shadow-lg shadow-bottom hover:bg-gray-200 transition-colors duration-300">
-        Agregar Item
-    </button>
-    <button (click)="removeItem()"
-        class="mt-6 bg-[#F4DA5D] font-bold px-4 py-2 rounded-full shadow-lg shadow-bottom hover:bg-gray-200 transition-colors duration-300">
-        eliminar Item
-    </button>
 </div>
