area de usuario temporal

--- a/client/NoWait/src/app/shared/components/sctruct/navbar-footer/navbar.component.html
+++ b/client/NoWait/src/app/shared/components/sctruct/navbar-footer/navbar.component.html
@@ -7,6 +7,6 @@
       <img src="assets/nowait-yellow-dark.svg" alt="" class="h-[30px] w-[40px]" />
     </span>
     <span><i class="fa-solid fa-gift"></i></span>
-    <span routerLink="/auth"><i class="fa-regular fa-user"></i></span>
+    <span routerLink="/user"><i class="fa-regular fa-user"></i></span>
   </article>
 </nav>
