--- a/client/NoWait/src/app/shared/components/sctruct/navbar/navbar.component.html
+++ b/client/NoWait/src/app/shared/components/sctruct/navbar/navbar.component.html
@@ -53,7 +53,7 @@
     </div>
     <!-- usuario -->
     <div class="hidden md:flex md:order-3 md:mx-3">
-      <a [routerLink]="['/auth']"
+      <a [routerLink]="['/user']"
         class="inline-flex items-center w-10 h-10 justify-center text-sm text-gray-500 rounded-lg "
         aria-controls="navbar-search" aria-expanded="false">
         <svg class="w-8 h-8 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
