boton de acceso a los locales

--- a/client/NoWait/src/app/pages/home/components/banner-home/banner-home.component.html
+++ b/client/NoWait/src/app/pages/home/components/banner-home/banner-home.component.html
@@ -1,4 +1,4 @@
-<div class="min-h-container box w-full max-lg:flex justify-center items-center relative md:h-screen" style="
+<div class="min-h-container box w-full max-lg:flex justify-center items-center relative md:h-screen z-0" style="
     background-image: url(assets/Food-short1.jpg);
     background-size: cover;
     background-position: center;
@@ -14,4 +14,37 @@
     class="absolute bottom-20 w-[12rem] lg:right-16 lg:top-40 md:w-[15rem] lg:translate-x-0" /> -->
   <img src="assets/Logo-Circulo.png" alt=""
     class="absolute bottom-20 w-[12rem] lg:right-16 lg:top-40 md:w-[15rem] lg:translate-x-0 animate-pulse" />
+
+  <div class="flex flex-col justify-center items-center md:flex-row gap-5 md:absolute md:bottom-[10%] md:left-10">
+    <button routerLink="/shop" class=" inline-flex items-center w-max h-10 justify-center text-lg text-yanone text-white rounded-2xl px-4 border-4 bg-[--info] shadow shadow-gray-500 drop-shadow hover:text-black hover:bg-white
+              border-[--info]" aria-controls="navbar-search" aria-expanded="false">
+      <svg class="h-6" id="Layer_1" style="enable-background:new 0 0 30 30;" version="1.1" viewBox="0 0 30 30"
+        xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <path
+          d="M23,14c-0.733,0-1.414-0.208-2.005-0.554C20.405,13.789,19.73,14,19,14c-0.732,0-1.409-0.212-2-0.556  C16.409,13.788,15.732,14,15,14c-0.732,0-1.409-0.212-2-0.556C12.409,13.788,11.732,14,11,14c-0.73,0-1.405-0.211-1.995-0.554  C8.414,13.792,7.733,14,7,14c-0.727,0-1.4-0.21-1.988-0.55C4.42,13.797,3.734,14,3,14v11c0,1.105,0.895,2,2,2h12V17h6v10h2  c1.105,0,2-0.895,2-2V14c-0.734,0-1.42-0.203-2.012-0.55C24.4,13.79,23.727,14,23,14z M13,23H7v-6h6V23z" />
+        <path d="M26,6H4V5c0-1.105,0.895-2,2-2h18c1.105,0,2,0.895,2,2V6z" />
+        <g>
+          <path d="M20,6h-3v4c0,1.105,0.895,2,2,2s2-0.895,2-2L20,6z" />
+        </g>
+        <g>
+          <path d="M26,6h-3l2,4c0,1.105,0.895,2,2,2s2-0.895,2-2L26,6z" />
+        </g>
+        <g>
+          <path d="M20,6h-3v4c0,1.105,0.895,2,2,2s2-0.895,2-2L20,6z" />
+        </g>
+        <g>
+          <path d="M10,6h3v4c0,1.105-0.895,2-2,2s-2-0.895-2-2L10,6z" />
+        </g>
+        <g>
+          <path d="M4,6h3l-2,4c0,1.105-0.895,2-2,2s-2-0.895-2-2L4,6z" />
+        </g>
+      </svg>
+      <samp class="pl-2">Lista de Locales</samp>
+    </button>
+    <!-- <button routerLink="/auth" class=" inline-flex items-center w-max h-10 justify-center text-lg text-yanone text-white rounded-2xl px-4 border-4 bg-[--info] shadow shadow-gray-500 drop-shadow hover:text-black hover:bg-white
+                  border-[--info]" aria-controls="navbar-search" aria-expanded="false">
+      <samp class="pl-0">Iniciar Sesion</samp>
+    </button> -->
+  </div>
+
 </div>
