feat(front): Configuracion de PWA
primera version de PWA

refs: (#51)

--- a/client/NoWait/src/app/pages/locals/shop.component.html
+++ b/client/NoWait/src/app/pages/locals/shop.component.html
@@ -16,7 +16,7 @@
         }
         }@else {
         <!-- TODO: Falta maquetar -->
-        <p>buscando ...</p>
+        <p>cargando...</p>
         }
     </div>
 </div>
