--- a/client/NoWait/src/app/pages/locals/card-shop/card-shop.component.html
+++ b/client/NoWait/src/app/pages/locals/card-shop/card-shop.component.html
@@ -1,8 +1,9 @@
-<div class="bg-white w-full max-w-[330px] h-[130px] flex rounded-lg drop-shadow-xl shadow-lg font-abc ">
+<div class="bg-white w-[360px] h-[130px] flex rounded-lg drop-shadow-xl shadow-lg md:w-[380px] px-4">
     <div>
-        <img class="w-[106px] h-[106px] ml-[17px] mt-[11.5px] rounded-full  object-cover" [src]="item.imageUrl" />
+        <img class="w-[108px] h-[108px] my-[11px] rounded-full object-cover shadow-md shadow-zinc-300"
+            [src]="item.imageUrl" />
     </div>
-    
+
     <div class=" mt-[22px] ml-[24px]  w-[155px] h-[68px] font-abc]">
         <div class="flex">
             <h1 class=" font-medium tracking-tight text-[22px]">{{item.name | uppercase}}</h1>
@@ -11,12 +12,12 @@
         <p class="text-[12px] leading-4 tracking-widest">{{item.description}}
         </p>
     </div>
-    
+
     <div class="mt-[10px] mr-[15px]">
         @for(category of item.categories; track $index){
-            @if(category == "Platos Vegetarianos"){
-                <span class="text-[14px]">X</span>
-            }
+        @if(category == "Platos Vegetarianos"){
+        <span class="text-[14px]">X</span>
+        }
         }
     </div>
 </div>
