integracion de mensaje error de inicio y btn de logout

--- a/client/NoWait/src/app/pages/user/user.component.html
+++ b/client/NoWait/src/app/pages/user/user.component.html
@@ -14,8 +14,12 @@
                 <!-- <button
                     class="text-[1.4rem] border-y-2 border-transparent bg-gradient-to-r from-transparent from-0% via-[#DBD9D9] via-50% to-transparent drop-shadow-md"> -->
                 <button class="text-[1.4rem] w-full h-10 justify-center text-lg text-white rounded-2xl px-4 border-4 bg-[--info] shadow shadow-gray-500 drop-shadow hover:text-black hover:bg-white
-                            border-[--info]" aria-controls="navbar-search" aria-expanded="false">
+                            border-[--info]" aria-expanded="false">
                     Historial de Ordenes
+                </button>
+                <button (click)="logOut()" class="text-[1.4rem] mt-4 w-full h-10 justify-center text-lg text-white rounded-2xl px-4 border-4 bg-[--primary] shadow shadow-gray-500 drop-shadow hover:text-black hover:bg-white
+                                            border-[--primary]" aria-expanded="false">
+                    Cerrar Sesion
                 </button>
             </div>
         </div>
