--- a/client/NoWait/src/app/pages/auth/pages/login/login.component.html
+++ b/client/NoWait/src/app/pages/auth/pages/login/login.component.html
@@ -64,7 +64,7 @@
 
       </div>
       <!-- Agregar hover y disable -->
-      <button type="submit" [disabled]="!submitState()"
+      <button #btnSubmit type="submit" [disabled]="!submitState()"
         class="mt-6 bg-[#F4DA5D] font-bold px-4 py-2 rounded-full shadow-lg shadow-bottom drop-shadow-md text-black hover:bg-white ">
         Iniciar sesión
       </button>
@@ -81,8 +81,8 @@
   <div id="toast-simple"
     class="flex items-center w-full text-yanone max-w-xs p-4 space-x-4 rtl:space-x-reverse text-gray-500 bg-white divide-x rtl:divide-x-reverse divide-gray-200 rounded-lg dark:text-gray-400 dark:divide-gray-700 space-x dark:bg-gray-800 absolute bottom-[40px] z-30 shadow-sm shadow-gray-400"
     role="alert">
-    <svg aria-hidden="true" class="w-8 h-8 text-gray-200 animate-spin dark:text-gray-600 fill-blue-600"
-      viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <svg aria-hidden="true" class="w-8 h-8 text-gray-200 animate-spin fill-[--info]" viewBox="0 0 100 101" fill="none"
+      xmlns="http://www.w3.org/2000/svg">
       <path
         d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z"
         fill="currentColor" />
@@ -91,7 +91,7 @@
         fill="currentFill" />
     </svg>
     <span class="sr-only">Loading...</span>
-    <div class="ps-4  font-medium text-[1rem] text-black">Cargando</div>
+    <div class="ps-4  font-medium text-[1.2rem] text-black">Cargando...</div>
   </div>
   }
 
