--- a/client/NoWait/src/app/shared/components/msn-error/msn-error.component.html
+++ b/client/NoWait/src/app/shared/components/msn-error/msn-error.component.html
@@ -1,7 +1,35 @@
 @if (show()) {
 <div class="flex justify-center text-yanone">
 
-    <div class="bg-[#FF1D25] rounded-tl-3xl rounded-br-3xl rounded-bl-3xl mt-4 mx-[42px] w-[280px] h-[182px] py-10">
+    <div
+        class="bg-[#FF1D25] rounded-tl-3xl rounded-br-3xl rounded-bl-3xl mt-4 mx-[42px] w-[280px] h-[182px] pt-2 pb-10">
+        <div class="w-full flex justify-end pr-2">
+            <button (click)="show.set(false)" type="button"
+                class="mafont-normal text-white border-[3px] border-white m-0 p-[5px] rounded-md">
+                <svg class="h-3 fill-white" version="1.1" viewBox="0 0 47 52" xml:space="preserve"
+                    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <g>
+                        <path
+                            d="M45.243,41.757L31.455,26l13.788-15.758c2.343-2.344,2.343-6.143,0-8.486c-2.345-2.343-6.144-2.342-8.486,0.001   L23.5,16.909L10.243,1.757C7.9-0.585,4.102-0.586,1.757,1.756c-2.343,2.344-2.343,6.143,0,8.486L15.545,26L1.757,41.757   c-2.343,2.343-2.343,6.142-0.001,8.485c2.344,2.344,6.143,2.344,8.487,0L23.5,35.09l13.257,15.152c2.345,2.344,6.144,2.344,8.487,0   C47.586,47.899,47.586,44.1,45.243,41.757z" />
+                    </g>
+                    <g />
+                    <g />
+                    <g />
+                    <g />
+                    <g />
+                    <g />
+                    <g />
+                    <g />
+                    <g />
+                    <g />
+                    <g />
+                    <g />
+                    <g />
+                    <g />
+                    <g />
+                </svg>
+            </button>
+        </div>
         <div>
             <p class="text-[2.5rem] text-center text-white p-0 font-bold ">OUCH!!!
                 <svg class="inline-block h-7 w-7 fill-white" style="enable-background:new 0 0 24 24;" version="1.1"
